<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.quiz2.activities.PlayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quizTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_quizTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizGenre"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizQuestion1"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/a1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizAnswer1"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizQuestion2"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/a2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizAnswer2"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/q3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizQuestion3"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/a3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizAnswer3"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/q4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizQuestion4"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/a4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizAnswer4"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/q5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizQuestion5"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/a5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_quizAnswer5"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/btnSub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="Submit"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>